# JammBox

./: .gitignore  README.md  bootsec.hex  diskcheck.c  diskcheck.h  jammbox.c  jbox.c  jboxconfig.h.in  mbr_sector.c  meson.build  note.txt  run
assets/misc/: INFO.TXT  START.BAT.TEMPLATE
games/Pacman/: README.md
games/princeofpersia/: POPV2_README.md  POP_README.md  README.md  prince.img
src/: archive.c  archive.h  attr.h  dboxutils.c  dboxutils.h  diskcheck.c  diskcheck.h  jbox.c  mbr.h  test_ui.c  ui.c  ui.h
